--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,9 @@
 // import modules _vars.scss
 @import "./modules/vars";
+@import "./modules/nav";
 @import "./modules/general";
 @import "./modules/home";
+@import "./modules/about";
 @import "./modules/queries";
 
 #__nuxt {
@@ -11,4 +13,13 @@
   top: 0;
   left: 0;
   right: 0;
+}
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.5s;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
 }
