--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,6 +4,8 @@
 @import "./modules/general";
 @import "./modules/home";
 @import "./modules/about";
+@import "./modules/project";
+@import "./modules/footer";
 @import "./modules/queries";
 
 #__nuxt {
@@ -13,6 +15,10 @@
   top: 0;
   left: 0;
   right: 0;
+}
+
+.scroll-content {
+  background-color: $primary-white;
 }
 
 .page-enter-active,
