--- a/assets/sass/modules/_general.scss
+++ b/assets/sass/modules/_general.scss
@@ -33,7 +33,7 @@
   margin: 100px 0;
 
   &__image {
-    margin-top: 35px;
+    margin-top: 75px;
     transform: scale(1.05);
   }
 }
@@ -44,6 +44,10 @@
   font-weight: bold;
   line-height: 97.9%;
   margin-bottom: 13px;
+
+  &--cta {
+    margin-bottom: 29px;
+  }
 
   &--period {
     color: $primary-blue;
@@ -96,4 +100,36 @@
   font-weight: 500;
   line-height: 140%;
   width: 80%;
+}
+
+.para {
+  line-height: 140%;
+  color: $primary-black;
+  font-weight: 500;
+
+  &--project {
+    width: 85%;
+  }
+}
+
+.cta {
+  margin-bottom: 80px;
+  &__links {
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+  }
+
+  &__link {
+    color: $primary-black;
+    font-weight: bold;
+    font-size: 34px;
+    text-decoration: none;
+    display: flex;
+  }
+
+  &__arrow {
+    width: 30px;
+    margin-left: 12px;
+  }
 }
