--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -15,3 +15,116 @@
     margin: 120px 0;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .nav {
+    &__wrapper {
+      padding: 18px 25px;
+    }
+
+    &__line {
+      width: 30px;
+      height: 3px;
+      margin: 6px 0;
+    }
+
+    &__link {
+      font-size: 69px;
+
+      &--name {
+        font-size: 30px;
+        letter-spacing: 0.8px;
+      }
+    }
+
+    &__socials {
+      margin-bottom: 40px;
+
+      a {
+        font-size: 20px;
+      }
+    }
+
+    &__links { gap: 90px; }
+
+    &__list { padding: 0 60px; }
+
+    &__close {
+      top: 35px;
+      right: 59px;
+      width: 45px;
+      height: 45px;
+      font-size: 22px;
+    }
+  }
+
+  .title {
+    &--home {
+      &--name {
+        font-size: 56px;
+      }
+
+      &--role {
+        font-size: 120px;
+      }
+
+      &--dev {
+        &::after {
+          height: 11px;
+          margin-top: 40px;
+        }
+      }
+    }
+  }
+
+  span.title--home--role:nth-child(2) {
+    margin: 40px 0 0;
+  }
+
+  span.title--home--role:nth-child(3) {
+    margin-top: 70px;
+  }
+
+  .home {
+    &__project {
+      width: min(77%, 633px);
+
+      &--left {
+        margin-right: 0;
+      }
+
+      &--right {
+        margin-left: 8px;
+      }
+
+      h2 {
+        margin: auto 0 35px 0;
+        font-size: 22px;
+        padding: 24px min(8%, 150px);
+      }
+    }
+
+    &__info {
+      padding: 0 35px;
+    }
+
+    &__plus {
+      width: 49px;
+      height: 49px;
+      font-size: 28px;
+      margin: auto 0 45px 0;
+    }
+
+    &__images, &__projects {
+      gap: 150px 0;
+    }
+
+    .hero {
+      margin: 222px 0 276px;
+    }
+  }
+
+  .iamge-container {
+    border-radius: min(9%, 70px);
+  }
+}
