--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -418,13 +418,111 @@
 // nav mw: 691px
 
 @media screen and (min-width: 1360px) {
+  .nav {
+
+    &--dark {
+      background-color: transparent;
+
+      .nav__wrapper {
+        background-color: rgba(56,56,56, 0.97);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        width: 55%;
+        max-width: 1100px;
+      }
+    }
+
+    &__wrapper {
+      padding: 22px 62px;
+      position: fixed;
+      width: 90%;
+      max-width: 90%;
+      margin-top: 1%;
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 9999999px;
+      filter: drop-shadow(0px 4px 4px transparent);
+      background-color: transparent;
+      transition: all 0.4s ease-in-out;
+    }
+  }
   .hero {
     margin: 245px 0;
+  }
+
+  .image-container {
+    max-width: 880px;
   }
 
   .para {
     &--small {
       font-size: 20px;
+    }
+  }
+
+  .home {
+    max-width: 1700px;
+    margin: 0 auto;
+
+    &__projects, &__images {
+      gap: 40px 135px;
+      align-items: flex-start;
+      width: 100%;
+      justify-content: center;
+      margin-bottom: 120px;
+    }
+
+    &__projects {
+      flex-direction: column;
+    }
+
+    &__images {
+      flex-direction: row;
+
+      &:nth-child(1) > a:nth-child(1) {
+        width: 55%;
+      }
+
+      &--mid {
+        .image-container {
+          width: 100%;
+        }
+      }
+    }
+
+    &__project {
+      h2 {
+        font-size: 22px;
+        padding: 22px min(10%, 36px);
+      }
+
+      &--right:nth-child(2) {
+        width: 35%;
+        justify-self: flex-end;
+        margin-top: auto;
+      }
+
+      &--right:nth-child(1) {
+        width: 39%;
+        margin-top: 200px;
+      }
+
+      &--left {
+        margin-right: auto;
+      }
+
+      &--leftSmall {
+        width: 49%;
+      }
+      
+    }
+
+    &__info {
+      justify-content: flex-start;
+    }
+
+    &__plus {
+      font-size: 27px;
+      margin: auto 0 41px 20px;
     }
   }
 
