--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -419,7 +419,6 @@
 
 @media screen and (min-width: 1360px) {
   .nav {
-
     &--dark {
       background-color: transparent;
 
@@ -451,11 +450,21 @@
 
   .image-container {
     max-width: 880px;
+
+    &--project {
+      flex: none;
+    }
   }
 
   .para {
     &--small {
       font-size: 20px;
+    }
+
+    &--project {
+      width: 59%;
+      font-size: 23px;
+      max-width: 819px;
     }
   }
 
@@ -553,6 +562,160 @@
       margin: 125px auto;
     }
   }
+
+  .project {
+    max-width: 1600px;
+    margin: 0 auto;
+
+    .hero--project {
+      margin-top: 220px;
+    }
+
+    .hero__image {
+      width: 68%;
+      margin: 160px auto;
+    }
+
+    &__content {
+      width: 1250px;
+      margin: 300px auto;
+      position: relative;
+    }
+
+    .title {
+      width: 829px;
+    }
+
+    &__sectionName {
+      display: block;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 5%;
+      font-size: 28px;
+      font-family: "Heebo", sans-serif;
+      font-weight: bold;
+      color: $primary-black;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: -100%;
+        width: 48px;
+        height: 4px;
+        background-color: $primary-blue;
+      }
+    }
+
+    &__images {
+      &:nth-child(2) > div:nth-child(1) > div:nth-child(1) {
+        width: 50%;
+        max-width: 659px;
+        margin-left: 0;
+       }
+
+       &:nth-child(2) > div:nth-child(1) > div:nth-child(2) {
+        margin-top: 237px;
+        width: 39%;
+        max-width: 482px;
+       }
+
+       &:nth-child(4) > div:nth-child(1) > div:nth-child(2) {
+        margin-top: 75px;
+       }
+       
+      div.image-container--project:nth-child(3) {
+        margin-top: -30px;
+      }
+
+      &--dual {
+        margin-top: -150px;
+
+        .project__scroll {
+          gap: 59px;
+          flex-direction: row;
+        }
+      }
+
+      &--tri {
+        margin-top: -140px;
+
+        .project__scroll {
+          gap: 70px;
+          justify-content: center;
+          flex-direction: row;
+        }
+
+        .image-container--project {
+          max-width: 400px;
+          width: 29%;
+        }
+      }
+    }
+  }
+
+  .project__scroll {
+    overflow-x: visible;
+    align-items: flex-start;
+    flex-direction: row;
+  }
+
+  .work {
+    max-width: 1600px;
+    margin: 0 auto;
+
+    &__hero {
+      margin-bottom: 150px;
+
+      .title {
+        width: 710px;
+      }
+
+      .about__para {
+        width: 652px;
+        font-size: 24px;
+      }
+    }
+
+    &__info {
+      padding: 0 45px;
+
+      h2 {
+        margin-bottom: 40px;
+      }
+    }
+
+    &__plus {
+      margin-bottom: 53px;
+    }
+
+    &__project {
+      margin: 0;
+    }
+
+    .image-container {
+      width: min(43%, 550px)
+    }
+
+    &__images {
+      gap: 117px;
+      width: 100%;
+      margin-bottom: 230px;
+    }
+
+  }
+
+  .cta {
+    .title {
+      width: 700px;
+    }
+
+    &__link {
+      font-size: 40px;
+    }
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -582,6 +745,20 @@
       width: 85%;
     }
   }
+}
 
+@media screen and (min-width: 1600px) {
+  .project {
+    &__images {
+      &--tri {
+        .project__scroll {
+          gap: 125px;
+        }
 
+        .image-container--project {
+          width: 31%;
+        }
+      }
+    }
+  }
 }
