adding SEO and new content

--- a/assets/sass/modules/_project.scss
+++ b/assets/sass/modules/_project.scss
@@ -28,6 +28,11 @@
 
 }
 
+.para--project h5 {
+  font-weight: bold;
+  font-family: 'Heebo', sans-serif;
+}
+
 .image-container--project {
   flex: 1 0 auto;
   width: 250px;
