added services and contact pages. changed title on home page. styled and scaled both contact and services. minor adjustments to various pieces

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./modules/home";
 @import "./modules/about";
 @import "./modules/project";
+@import "./modules/services";
 @import "./modules/footer";
 @import "./modules/queries";
 
