--- a/assets/sass/modules/_general.scss
+++ b/assets/sass/modules/_general.scss
@@ -130,10 +130,30 @@ span.title--home--role:nth-child(3) {
     font-size: 34px;
     text-decoration: none;
     display: flex;
+    max-width: fit-content;
   }
 
   &__arrow {
     width: 30px;
     margin-left: 12px;
+  }
+}
+
+.contact {
+  &__links {
+    display: flex;
+    flex-direction: column;
+    gap: 65px;
+    margin-bottom: 180px;
+  }
+  
+  &__link {
+    text-decoration: none;
+    color: $primary-black;
+    font-weight: bold;
+    font-size: 50px;
+    display: block;
+    word-break: break-word;
+    width: 295px;
   }
 }
