--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -1,5 +1,35 @@
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 390px) {
+  .nav {
+    &__links {
+      gap: 65px
+    }
+
+    &__socials {
+      margin-bottom: 44px;
+
+      a {
+        font-size: 18px;
+      }
+    }
+
+    &__link {
+      &--name { font-size: 22px; }
+    }
+
+    &__close {
+      top: 24px;
+      right: 40px;
+      font-size: 17px;
+    }
+  }
+
+  .about__para {
+    font-size: 18px;
+  }
+
   .title {
+    font-size: 64px;
+
     &--home {
       &--name {
         font-size: 34px;
@@ -13,6 +43,10 @@
 
   .hero {
     margin: 120px 0;
+  }
+
+  .services {
+    &__para, &__listItem { font-size: 17px; }
   }
 }
 
@@ -92,6 +126,10 @@
           margin-top: 30px;
         }
       }
+    }
+
+    &--cta {
+      width: 700px;
     }
   }
 
@@ -339,6 +377,70 @@
     }
   }
 
+  .services {
+    &__item {
+      width: 80%;
+      max-width: 800px;
+      margin: 190px auto;
+    }
+
+    &__title {
+      gap: 30px;
+
+      &::after {
+        width: 30%;
+        height: 5px;
+      }
+    }
+
+    &__name { font-size: 90px; }
+
+    &__price { font-size: 32px; }
+
+    &__para, &__listItem { font-size: 24px; }
+
+    &__para {
+      width: 86%;
+      margin: 35px 0 50px;
+    }
+
+    &__list { gap: 25px; }
+
+    &__listItem {
+      gap: 11px;
+      width: 80%;
+    }
+
+    &__arrow {
+      width: 12px;
+      margin-top: 10px;
+    }
+
+    &__btn {
+      font-size: 30px;
+      margin: 50px 0 50px auto;
+    }
+  }
+
+  .contact {
+    &__hero {
+      .title { width: 572px; }
+
+      .about__para {
+        width: 555px;
+      }
+    }
+
+    &__links {
+      gap: 120px;
+    }
+
+    &__link {
+      font-size: 90px;
+      width: 532px;
+    }
+  }
+
   .cta {
     &__links {
       flex-direction: row;
@@ -415,7 +517,19 @@
   }
 }
 
-// nav mw: 691px
+@media screen and (min-width: 1100px) {
+  .contact {
+    &__hero {
+      .about__para { width: 635px; }
+    }
+    &__links {
+      gap: 180px;
+      div:first-child {
+        a {width: 966px;}
+      }
+    }
+  }
+}
 
 @media screen and (min-width: 1360px) {
   .nav {
@@ -441,7 +555,7 @@
       border-radius: 9999999px;
       filter: drop-shadow(0px 4px 4px transparent);
       background-color: transparent;
-      transition: all 0.4s ease-in-out;
+      transition: all 0.6s cubic-bezier(0.33, 1, 0.68, 1);
     }
   }
   .hero {
@@ -696,15 +810,75 @@
     }
 
     .image-container {
-      width: min(43%, 550px)
+      width: min(43%, 600px)
     }
 
     &__images {
-      gap: 117px;
+      gap: 117px 152px;
       width: 100%;
       margin-bottom: 230px;
     }
 
+  }
+
+  .services {
+    &__hero {
+      .title, .about__para {
+        width: 600px;
+      }
+    }
+
+    &__item {
+      width: 90%;
+      max-width: 1800px;
+    }
+
+    &__title { 
+      gap: 16px; 
+
+      &::after {
+        width: 7%;
+        max-width: 110px;
+      }
+    }
+
+    &__name { font-size: 100px; }
+
+    &__price { margin-bottom: 10px; }
+
+    &__para {
+      width: 869px;
+      margin: 50px 0 70px;
+    }
+
+    &__list {
+      gap: 40px 73px;
+      align-self: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      flex-direction: row;
+    }
+
+    &__listItem {
+      width: 42%;
+
+      p {
+        align-self: flex-start;
+      }
+    }
+
+    &__arrow {
+      width: 15px;
+      margin-top: 6px;
+    }
+
+    &__btn {
+      margin: 140px 0 110px;
+      font-size: 40px;
+      display: flex;
+      align-items: center;
+      align-self: center;
+    }
   }
 
   .cta {
