--- a/assets/sass/modules/_general.scss
+++ b/assets/sass/modules/_general.scss
@@ -1,7 +1,8 @@
 #wrapper {
   width: 88%;
   margin: 0 auto;
-  font-family: 'Heebo';
+  max-width: 1800px;
+  font-family: 'Heebo', sans-serif;
 }
 
 .image-container {
@@ -45,6 +46,16 @@
   line-height: 97.9%;
   margin-bottom: 13px;
 
+  &--services {
+    width: 300px;
+  }
+
+  &--bio {
+    width: 250px;
+  }
+
+  &--growth { width: 300px; }
+
   &--cta {
     margin-bottom: 29px;
   }
@@ -69,8 +80,6 @@
     }
 
     &--dev {
-      align-self: center;
-      margin-left: auto;
       position: relative;
 
       &::after {
@@ -91,7 +100,7 @@
 }
 
 span.title--home--role:nth-child(3) {
-  margin-top: 20px;
+  margin-top: 10px;
 } 
 
 .pipe {
@@ -155,5 +164,86 @@ span.title--home--role:nth-child(3) {
     display: block;
     word-break: break-word;
     width: 295px;
+  }
+}
+
+.home__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  margin-top: 60px;
+  width: 100%;
+}
+
+.home__card {
+  background-color: #FAFAFA;
+  border: solid 1px #D4D4D4;
+  box-shadow: 0px 7px 12px -2px rgba(0, 0, 0, 0.25);
+  border-radius: 17px;
+  max-width: 360px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.card {
+  &__title {
+    text-align: center;
+    margin: 38px 0 22px 0;
+    font-size: 22px;
+    font-weight: 500;
+    color: $primary-black;
+  }
+
+  &__price {
+    text-align: center;
+    font-size: 54px;
+    font-weight: bold;
+    color: $primary-black;
+    margin-bottom: 19px;
+  }
+
+  &__tagline {
+    text-align: center;
+    color: #767676;
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  &__points { margin: 47px 0; }
+
+  &__point {
+    display: flex;
+    width: 85%;
+    margin: 24px auto;
+    border-bottom: solid 2px #B7B7B7;
+    padding-bottom: 10px;
+    align-items: center;
+
+    h4 {
+      color: #464646;
+      font-weight: 500;
+      font-size: 16px;
+      text-align: center;
+    }
+  }
+
+  &__check {
+    width: 22px;
+    margin-right: 20px;
+    margin-left: 5px;
+  }
+
+  &__link {
+    display: block;
+    text-align: center;
+    width: 60%;
+    padding: 22px 0;
+    background-color: #2B2B2B;
+    margin: 47px auto;
+    color: #FAFAFA;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 6px;
+    text-decoration: none;
   }
 }
