--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -45,6 +45,50 @@
     margin: 120px 0;
   }
 
+  .home {
+    &__hero {
+      margin: 0;
+      height: auto;
+      padding: 140px 0 343px;
+    }
+
+    &__arrow {
+      display: none;
+    }
+
+    &__project {
+      h2 {
+        font-size: 17px;
+        padding: 17px min(8%, 150px);
+      }
+    }
+
+    &__images {
+      a:first-child {
+        margin-top: -40px;
+      }
+    }
+  }
+
+  .card {
+    &__tagline {
+      font-size: 16px;
+    }
+
+    &__point {
+      width: 82%;
+      padding-bottom: 8px;
+
+      h4 { font-size: 16px; }
+    }
+
+    &__check {
+      width: 24px;
+      margin-right: 20px;
+      margin-left: 5px;
+    }
+  }
+
   .services {
     &__para, &__listItem { font-size: 17px; }
   }
@@ -105,14 +149,20 @@
 
   .title {
     font-size: 110px;
-    &--home {
-      &--name {
-        font-size: 56px;
-      }
 
-      &--role {
-        font-size: 120px;
-      }
+    &--growth { width: 500px; }
+
+    &--featured { width: 500px; }
+
+    &--bio { width: 305px; }
+
+    &--services { width: 460px; }
+    
+    &--home {
+      margin: 150px auto 0;
+      &--name { font-size: 56px; }
+
+      &--role { font-size: 120px; }
 
       &--about {
         margin-bottom: 20px;
@@ -128,9 +178,7 @@
       }
     }
 
-    &--cta {
-      width: 700px;
-    }
+    &--cta { width: 700px; }
   }
 
   .para {
@@ -150,6 +198,34 @@
   }
 
   .home {
+
+    &__subtitle {
+      margin-top: 100px;
+      width: 350px;
+      font-size: 24px;
+    }
+
+    &__arrow { display: block; }
+
+    &__growth { margin-top: 100px; }
+
+    &__card { max-width: 435px; }
+
+    &__aboutWrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 60px;
+      margin-top: 70px;
+
+      .image-container {
+        width: 225px;
+        margin: 0;
+      }
+    }
+
+    &__bio { width: 60%; }
+
     &__project {
       width: min(77%, 633px);
 
@@ -184,7 +260,22 @@
     }
 
     &__hero {
-      margin: 240px 0 280px;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+    }
+  }
+
+  .bio {
+    &__para {
+      margin: 34px 0 24px;
+      width: 90%;
+      font-size: 18px;
+    }
+
+    &__btn {
+      width: 160px;
+      padding: 17px 0;
     }
   }
 
@@ -241,6 +332,29 @@
     &__content {
       font-size: 16px;
     }
+  }
+
+  .card {
+    &__title { font-size: 24px; }
+
+    &__price { font-size: 60px; }
+
+    &__tagline { font-size: 18px; }
+
+    &__point {
+      width: 75%;
+      padding-bottom: 10px;
+
+      h4 { font-size: 18px; }
+    }
+
+    &__check {
+      width: 26px;
+      margin-right: 30px;
+      margin-left: 15px;
+    }
+
+    &__link { font-size: 19px; }
   }
 
   #about { gap: 290px; }
@@ -464,22 +578,25 @@
 
 @media screen and (min-width: 1000px) {
   span.title--home--role:nth-child(2) {
-    margin:20px 0 0;
+    margin: 30px 0 0;
    }
 
    span.title--home--role:nth-child(3) {
-    margin-top:40px;
+    margin-top: 55px;
+    margin-left: auto;
    }   
 
   .title {
     &--home {
-      width: min(100%, 1045px);
+      width: min(100%, 1145px);
+      margin: auto auto 80px;
+
       &--name {
         font-size: 80px;
       }
 
       &--role {
-        font-size: 140px;
+        font-size: 164px;
       }
 
       &--dev {
@@ -515,6 +632,24 @@
       gap: 32px;
     }
   }
+
+  .home {
+    &__subtitle {
+      display: block;
+      width: auto;
+      text-align: center;
+      margin-top: 65px;
+      font-size: 30px;
+    }
+
+    &__cards {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 55px 32px;
+    }
+
+    &__card { width: 46%; }
+  }
 }
 
 @media screen and (min-width: 1100px) {
@@ -532,6 +667,12 @@
 }
 
 @media screen and (min-width: 1360px) {
+  .title {
+    &--home { margin: auto; }
+
+    &--bio { display: none; }
+  }
+
   .nav {
     &--dark {
       background-color: transparent;
@@ -558,9 +699,6 @@
       transition: all 0.6s cubic-bezier(0.33, 1, 0.68, 1);
     }
   }
-  .hero {
-    margin: 245px 0;
-  }
 
   .image-container {
     max-width: 880px;
@@ -586,12 +724,70 @@
     max-width: 1700px;
     margin: 0 auto;
 
+    &__hero { position: relative; }
+
+    &__growth { margin-top: 150px; }
+
+    &__services, &__about {
+      margin: 300px 0;
+    }
+
+    &__services { margin-bottom: 0; }
+
+    &__about { margin-top: 140px; }
+
+    &__growth {
+      max-width: 1335px;
+    }
+
+    &__outcomes {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px 10px;
+      margin: 35px 0;
+    }
+
+    &__outcome {
+      font-size: 26px;
+    }
+
+    &__growthText {
+      p {
+        font-size: 24px;
+        line-height: 160%;
+      }
+    }
+
     &__projects, &__images {
       gap: 40px 135px;
       align-items: flex-start;
       width: 100%;
       justify-content: center;
       margin-bottom: 120px;
+    }
+
+    &__subtitle { display: none; }
+
+    &__arrow {
+      position: absolute;
+      margin: 0;
+      bottom: 50px;
+      left: 50%;
+      transform: rotate(90deg) translateX(-50%);
+      width: 14px;
+    }
+
+    &__cards {
+      gap: 21px;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    &__card { 
+      width: 32%;
+      margin: 0;
+      
+      &--0, &--2 { margin-top: 50px; }
     }
 
     &__projects {
@@ -601,13 +797,37 @@
     &__images {
       flex-direction: row;
 
-      &:nth-child(1) > a:nth-child(1) {
+      a:first-child {
         width: 55%;
+        margin-top: 0;
       }
 
       &--mid {
         .image-container {
           width: 100%;
+        }
+      }
+    }
+
+    &__aboutWrapper {
+      max-width: 935px;
+      margin: 70px auto 300px;
+      gap: 105px;
+
+      .image-container { 
+        width: 263px;
+        
+        .image {
+          transform: scale(1.2);
+        }
+      }
+
+      .about__subtitle { 
+        font-size: 46px;
+        
+        &::after {
+          width: 70px;
+          height: 6px;
         }
       }
     }
@@ -646,6 +866,25 @@
     &__plus {
       font-size: 27px;
       margin: auto 0 41px 20px;
+    }
+  }
+
+  .card {
+    &__point {
+      width: 80%;
+    }
+  }
+
+  .bio {
+    &__para {
+      width: 95%;
+      font-size: 22px;
+    }
+
+    &__btn {
+      width: 180px;
+      padding: 19px;
+      font-size: 18px;
     }
   }
 
@@ -897,6 +1136,13 @@
   .title {
     &--about {
       margin-bottom: 29px;
+    }
+  }
+
+  .home {
+    &__cards {
+      margin-top: 105px;
+      gap: 65px;
     }
   }
 
