--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -31,3 +31,18 @@
 .page-leave-to {
   opacity: 0;
 }
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0) rotate(90deg);
+  }
+  50% {
+    transform: translateY(-10px) rotate(90deg);
+  }
+  80% {
+    transform: translateY(0) rotate(90deg);
+  }
+  100% {
+    transform: translateY(0) rotate(90deg);
+  }
+}
