--- a/assets/sass/modules/_home.scss
+++ b/assets/sass/modules/_home.scss
@@ -1,7 +1,6 @@
 .home {
 
   &__hero {
-    height: calc(100vh - 100px);
     padding: 100px 0;
     margin: 0;
     display: flex;
@@ -21,6 +20,7 @@
     filter: brightness(0);
     margin: auto auto 55px;
     transform: rotate(90deg);
+    display: none;
     animation: bounce 3s cubic-bezier(0.85, 0, 0.15, 1) infinite;
   }
 
