--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -276,7 +276,6 @@
     &__hero {
       margin: 0;
       padding: 0;
-      height: 100vh;
     }
   }
 
@@ -671,6 +670,13 @@
 }
 
 @media screen and (min-width: 1100px) {
+  .home {
+    &__hero {
+      height: 100vh;
+      margin-bottom: 100px;
+    }
+  }
+
   .contact {
     &__hero {
       .about__para { width: 635px; }
