--- a/assets/sass/modules/_queries.scss
+++ b/assets/sass/modules/_queries.scss
@@ -991,7 +991,7 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        left: -100%;
+        left: -80px;
         width: 48px;
         height: 4px;
         background-color: $primary-blue;
