removed smoothscroll mixin for now to have better performance on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,15 +10,15 @@
 @import "./modules/footer";
 @import "./modules/queries";
 
-#__nuxt {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
+// #__nuxt {
+//   width: 100%;
+//   height: 100vh;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+// }
 
 .blog-layout {
   width: 100% !important;
